# AgriBot

./: README.md  app.py  main.py  openai_method.py  pyproject.toml  requirements.txt
src/agribot/: __init__.py
