[project]
name = "agribot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hrushik Reddy", email = "hrushik.reddy@techolution.com" }
]
dependencies = [
    "streamlit>=1.45.0",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "flask>=3.1.0",
    "fastapi>=0.115.12",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agribot"]
